# RQST

./: .gitignore  CLAUDE.md  IMPROVEMENT.md  README.md  VERIFICATION.md  changelog.md  claude-project-context.md  design-context.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  po-context.md  rqst.db-shm  rqst.db-wal  submit-ios.sh  tsconfig.base.json
Backend/: pyproject.toml  rqst.db-wal
Backend/app/: main.py
Backend/app/api/: router.py
Backend/app/api/routes/: __init__.py  admin.py  auth.py  me.py  notifications.py  requests.py  songs.py  venues.py
Backend/app/core/: config.py  database.py
Backend/app/models/: __init__.py  enums.py
Backend/app/realtime/: manager.py
Backend/app/repositories/: requests.py
Backend/app/schemas/: common.py  djs.py  payments.py  requests.py  sessions.py
Backend/app/services/: apple_music.py  payments.py  queue.py
Backend/app/tasks/: reconcile.py
Backend/app/tests/: test_queue.py  test_security.py
Desktop/: nuxt.config.ts  package.json
Mobile/: app.config.ts  eas.json  package.json
admin_dashboard/: app.vue  eslint.config.mjs  nuxt.config.ts  package.json
admin_dashboard/src-tauri/: Cargo.toml  tauri.conf.json
admin_dashboard/src-tauri/capabilities/: default.json
admin_dashboard/src-tauri/src/: lib.rs  main.rs
backend/: pyproject.toml  rqst.db-shm  rqst.db-wal  start.sh
desktop/: app.vue  nuxt.config.ts  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
docs/: api-and-state-machines.md  architecture.md  prd.md  user-flows.md
mobile/: .env.example  .gitignore  app.config.ts  eas.json  eslint.config.js  package.json  tsconfig.json
patches/: react-native-maps@1.27.2.patch
(+236 files in other folders)
