[package]
name = "rqst_admin_dashboard"
version = "0.1.0"
description = "RQST Admin Dashboard"
authors = ["RQST"]
edition = "2021"
rust-version = "1.86"

[lib]
name = "rqst_admin_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
